--- a/less/global.less
+++ b/less/global.less
@@ -30,6 +30,7 @@ a {
   font-size: 1.5rem;
   color: black;
   text-decoration: none;
+  padding: 0 5px;
 
   @media @phone {
     font-size: 1.8rem;
