--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,10 @@ header {
   background-color: @main-color;
   .borderBottom();
 
+  @media @phone {
+    height: 120px;
+  }
+
   nav {
     width: 20%;
     margin-top: 20px;
@@ -12,6 +16,8 @@ header {
     @media @phone {
       width: 80%;
       justify-content: space-around;
+      flex-wrap: wrap;
+      padding: 0 5px;
     }
   }
 }
